tests/snapshots/cli__view_add.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "--vault"
    - /var/folders/sy/j_tvsf5n5g3055p026gwzw1c0000gn/T/.tmpefFkmt
    - view
    - add
    - by-status
    - "--field"
    - status
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
Added view `by-status` (field `status`).

----- stderr -----
