tests/snapshots/cli__view_list.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "--vault"
    - /var/folders/sy/j_tvsf5n5g3055p026gwzw1c0000gn/T/.tmpefFkmt
    - view
    - list
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
by-tag	tags
by-status	status

----- stderr -----
