tests/snapshots/cli__view_remove.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - view
    - remove
    - by-status
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
Removed view `by-status`.
left directory `by-status/` in place, delete it manually if you no longer need it

----- stderr -----
