tests/snapshots/cli__write_rejects_path_outside_all_notes.snap
---
source: tests/cli.rs
expression: rendered(&out)
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: while writing the note: `[VAULT]/elsewhere.md` is not a note in the vault's `all-notes/`
