tests/snapshots/cli__write_rejects_unknown_target.snap
---
source: tests/cli.rs
expression: rendered(&out)
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: while writing the note: no note `[ULID....................]` in the vault's `all-notes/`
