tests/snapshots/cli__write_search_finds_the_written_note.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - search
    - "-n"
    - "tag:written and status:draft"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
ID                          DATE        TITLE         TAGS          PATH
[ULID....................]  [DATE....]  Written Note  written,work  [VAULT]/all-notes/[ULID....................]-written-note.md

----- stderr -----
